--- a/parent-pom/web-frontend/src/main/webapp/WEB-INF/views/empleados/show.jspx
+++ b/parent-pom/web-frontend/src/main/webapp/WEB-INF/views/empleados/show.jspx
@@ -3,7 +3,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:spring="http://www.springframework.org/tags"
 	xmlns:form="http://www.springframework.org/tags/form"
-	xmlns:joda="http://www.joda.org/joda/time/tags" version="2.0">
+	xmlns:joda="http://www.joda.org/joda/time/tags" >
 	<jsp:directive.page contentType="text/html;charset=UTF-8" />
 	<jsp:output omit-xml-declaration="yes" />
 
@@ -26,15 +26,29 @@
 	<spring:url value="/upload" var="contactPhotoUrl" />
 
 	<h1>${labelContactInfo}</h1>
-
+<script>
+function cambiarLetra(){
+	//document.body.style.background = document.getElementById('project_color').value;
+	var mivariable = document.getElementById('miimagen');
+	mivariable.style.width = (100 + document.getElementById('priority').value*10)+"px";
+	mivariable.style.height = (100 + document.getElementById('priority').value*10)+"px";
+}
+</script>
 	<div id="contactInfo">
 
 		<c:if test="${not empty message}">
 			<div id="message" class="${message.type}">${message.message}</div>
 		</c:if>
 	<c:if test="${empleado.dni!=null}">
-	    <img src="../images/${empleado.dni}"/>
-		<table >
+		<div class="imagen">
+	    <img src="../images/${empleado.dni}" id="miimagen" alt="foto"/>
+	    </div>
+		    <c:if test="${empleado.imagen!=null}">
+            	<input type="range" min="1" max="10" 
+                   name="priority" value="0" id="priority" onchange="cambiarLetra();"/>
+		</c:if>
+		<table id="texto">
+	
 			<tr>
 				<td>${labelEmpleadoDNI}</td>
 				<td>${empleado.dni}</td>
@@ -72,7 +86,9 @@
 				<td><a href="../empresas/${empleado.empresa.getNif()}">${empleado.empresa.getNif()}</a></td>
 			</tr>
 
+
 		</table>
+
 
 	<a href="${editContactUrl}/${empleado.dni}?form">${labelContactUpdate}</a>&#160;&#160;&#160;
 	<a href="${editContactUrl}/${empleado.dni}?del">${labelContactDelete}</a>&#160;&#160;&#160;
