--- a/parent-pom/web-frontend/src/main/webapp/WEB-INF/views/empleados/edit.jspx
+++ b/parent-pom/web-frontend/src/main/webapp/WEB-INF/views/empleados/edit.jspx
@@ -2,7 +2,7 @@
 <div xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:spring="http://www.springframework.org/tags"
-	xmlns:form="http://www.springframework.org/tags/form" version="2.0">
+	xmlns:form="http://www.springframework.org/tags/form" >
 	<jsp:directive.page contentType="text/html;charset=UTF-8" />
 	<jsp:output omit-xml-declaration="yes" />
 		
@@ -96,7 +96,7 @@
             ${labelEmpleadoEmpresa} 
             </form:label>			
 			<form:select path="empresa" items="${empresas}" itemLabel="nif" itemValue="nif"/>
-			<p/>
+			<p>&#160;</p>
 			<button name="submit" type="submit"
 				class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">
 				<span class="ui-button-text">Save</span>
