--- a/parent-pom/web-frontend/src/main/webapp/WEB-INF/views/footer.jspx
+++ b/parent-pom/web-frontend/src/main/webapp/WEB-INF/views/footer.jspx
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!--  <?xml version="1.0" encoding="UTF-8" standalone="no"?> -->
 <div id="footer" xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:spring="http://www.springframework.org/tags" version="2.0">
-	<jsp:directive.page contentType="text/html;charset=UTF-8" />
+	xmlns:spring="http://www.springframework.org/tags" > 
+	 <jsp:directive.page contentType="text/html;charset=UTF-8"/>
 	<jsp:output omit-xml-declaration="yes" />
 	
 	<spring:message code="home_text" var="homeText"/>
 	<spring:url value="/" var="homeUrl"/>
 
-    <a href="${homeUrl}">${homeText}</a> |
+    <a href="${homeUrl}">${homeText}</a> |             
  
 </div>
