--- a/parent-pom/web-frontend/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/parent-pom/web-frontend/src/main/webapp/WEB-INF/views/menu.jspx
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!-- <?xml version="1.0" encoding="UTF-8" standalone="no"?> -->
 <div id="main" xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:spring="http://www.springframework.org/tags"
-	xmlns:sec="http://www.springframework.org/security/tags" version="2.0">
+	xmlns:sec="http://www.springframework.org/security/tags" >
+	<jsp:output omit-xml-declaration="yes" />
 	<spring:message code="label_empleados" var="labelEmpleados" />
 	<spring:message code="label_upload" var="labelUpload" />
 	<spring:message code="label_combo" var="labelCombo" />
@@ -38,6 +39,6 @@
     });
     </script>
 	<div id="menu">
-	<div id="tree"/>
+	<div id="tree">#160;</div>
 	</div>
 </div>
